force-app/main/default/objects/FedEx_Shipment__c/FedEx_Shipment__c.object-meta.xml
<CustomObject>
    <label>FedEx Shipment</label>
    <nameField>
        <label>FedEx Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>