force-app/main/default/objects/FedEx_Shipment__c/fields/Exception_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Exception_Timestamp__c</fullName>
    <label>Exception Timestamp</label>
    <type>DateTime</type>
</CustomField>