force-app/main/default/objects/FedEx_Shipment__c/fields/FedEx_Shipment_Id__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Shipment_Id__c</fullName>
    <externalId>true</externalId>
    <label>FedEx Shipment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>