force-app/main/default/objects/FedEx_Shipment__c/fields/Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status__c</fullName>
    <label>Latest Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>