force-app/main/default/objects/FedEx_Shipment__c/fields/Master_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Tracking_Number__c</fullName>
    <externalId>true</externalId>
    <label>Master Tracking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>