force-app/main/default/objects/FedEx_Shipment__c/fields/Original_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Original_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Shipment</label>
    <referenceTo>FedEx_Shipment__c</referenceTo>
    <relationshipLabel>Return Shipments</relationshipLabel>
    <relationshipName>Return_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>