force-app/main/default/objects/FedEx_Shipment__c/fields/Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Type__c</fullName>
    <label>Packaging Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>