force-app/main/default/objects/FedEx_Shipment__c/fields/Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Type__c</fullName>
    <label>Pickup Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>