force-app/main/default/objects/FedEx_Shipment__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <label>Shipment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>